rio-macros/tests/ui_fail/managed_state_missing_service_object_imp.stderr
error[E0599]: the method `load_state` exists for mutable reference `&mut TestService`, but its trait bounds were not satisfied
 --> tests/ui_fail/managed_state_missing_service_object_imp.rs:8:37
  |
8 | #[derive(Default, WithId, TypeName, ManagedState)]
  |                                     ^^^^^^^^^^^^ method cannot be called on `&mut TestService` due to unsatisfied trait bounds
9 | struct TestService {
  | ------------------ doesn't satisfy `TestService: ObjectStateManager` or `TestService: ServiceObject`
  |
  = note: the following trait bounds were not satisfied:
          `TestService: ServiceObject`
          which is required by `TestService: ObjectStateManager`
          `&mut TestService: ServiceObject`
          which is required by `&mut TestService: ObjectStateManager`
note: the trait `ServiceObject` must be implemented
 --> $WORKSPACE/rio-rs/src/service_object.rs
  |
  | pub trait ServiceObject: Default + WithId + IdentifiableType {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `load_state`, perhaps you need to implement it:
          candidate #1: `ObjectStateManager`
  = note: this error originates in the derive macro `ManagedState` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `rio_rs::state::ObjectStateManager`
 --> tests/ui_fail/managed_state_missing_service_object_imp.rs:3:5
  |
3 | use rio_rs::state::ObjectStateManager;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
